feat: 대화 내용 쿠키 저장